[package]
name = "dl_checker"
version = "0.1.0"
authors = ["JohnnyFFM <JohnnyDeluxe@habmalnefrage.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
libc = "0.1"
hex = "0.3.1"
hyper = "0.12.20"
hyper-tls = "0.3.1"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
tokio-core = "0.1.17"

[build-dependencies]
cc = "1.0"
