[package]
name = "poc_checker"
version = "0.2.0"
authors = ["JohnnyFFM <JohnnyDeluxe@habmalnefrage.de>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
hex = "0.3.1"
hyper = "0.12.20"
hyper-tls = "0.3.1"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
tokio-core = "0.1.17"
jsonrpc = "0.11.0"
csv = "1.1.0"
pbr = "1.0.1"
rayon = "1.0.3"

[features]
default = ["opencl", "simd"]
opencl = []
simd = []
